# go-dep-consumer

./: .gitignore  BUILD.bazel  MODULE.bazel  bazel-bin  bazel-cc-structs-demo  bazel-out  bazel-testlogs  go.mod  go.sum
consumer/: BUILD.bazel  consumer.go
types/: consumer.go
