load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "consumer",
    srcs = ["consumer.go"],
    importpath = "github.com/bennettzhu1/go-dep-consumer/consumer",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_bennettzhu1_bazel_go_demo_dep_pkg_api//v1:api",
    ],
)
